--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body mv-app="todo" mv-plugins="firebase-firestore"
 			mv-storage="firebase://mavo-demos"
-			mv-firebase-key="AIzaSyDvZ3EBuhlvFm529vMPeU7dbqvdkjv9WQU"
-			mv-firebase-auth="google facebook twitter github">
+			mv-storage-key="AIzaSyDvZ3EBuhlvFm529vMPeU7dbqvdkjv9WQU"
+			mv-storage-auth="google facebook twitter github">
 	<header>
 		<h1>My tasks</h1>
 		<p>
@@ -26,7 +26,7 @@
 	</header>
 
 	<ul>
-		<li property="task" mv-multiple>
+		<li property="task" mv-list-item>
 			<label>
 				<input property="done" type="checkbox" />
 				<span property="taskTitle">Do stuff</span>
