--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body mv-app="todo" mv-plugins="firebase-firestore"
 			mv-storage="firebase://mavo-demos"
 			mv-storage-key="AIzaSyDvZ3EBuhlvFm529vMPeU7dbqvdkjv9WQU"
-			mv-storage-auth="google facebook twitter github">
+			mv-storage-providers="google facebook twitter github">
 	<header>
 		<h1>My tasks</h1>
 		<p>
